<?xml version="1.0" encoding="utf-8"?>

<!-- 로그인 후 메인 화면 레이아웃 -->
<android.support.v4.widget.DrawerLayout
    xmlns:android                                           = "http://schemas.android.com/apk/res/android"
    xmlns:app                                               = "http://schemas.android.com/apk/res-auto"
    xmlns:tools                                             = "http://schemas.android.com/tools"
    android:id                                              = "@+id/drawer_layout"
    android:layout_width                                    = "match_parent"
    android:layout_height                                   = "match_parent"
    android:fitsSystemWindows                               = "false">

    <!-- 구글 지도 + 정보창 -->
    <android.support.constraint.ConstraintLayout
        android:layout_width                                = "match_parent"
        android:layout_height                               = "match_parent">

        <!-- 구글 지도  레이아웃 -->
        <android.support.constraint.ConstraintLayout
            android:layout_width                            = "match_parent"
            android:layout_height                           = "match_parent"
            app:layout_constraintTop_toTopOf                = "parent"
            app:layout_constraintStart_toStartOf            = "parent">

            <!-- 구글맵 출력 공간(프레그먼트 -> 맵뷰) -->
            <fragment
                android:id                                  = "@+id/map"
                android:name                                = "com.google.android.gms.maps.SupportMapFragment"
                android:layout_width                        = "match_parent"
                android:layout_height                       = "match_parent"
                app:layout_constraintTop_toTopOf            = "parent"
                app:layout_constraintStart_toStartOf        = "parent"
                tools:context                               = "com.study.googlemapsandroidapiexample.Main_Page.MainActivity"
                />

            <!-- 미니맵 테두리 이미지 뷰 -->
            <ImageView
                android:id                                  = "@+id/minimap_side"
                android:layout_width                        = "205dp"
                android:layout_height                       = "205dp"
                android:visibility                          = "gone"
                android:scaleType                           = "fitXY"
                app:layout_constraintTop_toTopOf            = "parent"
                app:layout_constraintStart_toStartOf        = "parent"
                app:srcCompat                               = "@drawable/teduri" />

        <!-- 미니맵에 출력될 레이아웃 -->
        <android.support.constraint.ConstraintLayout
            android:id                                      = "@+id/minimap_layout"
            android:layout_width                            = "200dp"
            android:layout_height                           = "200dp"
            android:visibility                              = "gone"
            app:layout_constraintTop_toTopOf                = "parent"
            app:layout_constraintStart_toStartOf            = "parent">

            <!-- 미니맵 출력 공간(프레그먼트 -> 맵뷰) -->
            <fragment
                android:id                                  = "@+id/minimap"
                android:name                                = "com.google.android.gms.maps.SupportMapFragment"
                android:layout_width                        = "match_parent"
                android:layout_height                       = "match_parent"
                app:layout_constraintTop_toTopOf            = "parent"
                app:layout_constraintStart_toStartOf        = "parent"
                tools:context                               = "com.study.googlemapsandroidapiexample.Main_Page.MainActivity"
                />

        </android.support.constraint.ConstraintLayout>

            <!-- 로딩 시 나타날 이미지 뷰 -->
            <ImageView
                android:id                                  = "@+id/loading_iv_map"
                android:layout_width                        = "150dp"
                android:layout_height                       = "150dp"
                android:visibility                          = "gone"
                app:layout_constraintBottom_toBottomOf      = "parent"
                app:layout_constraintEnd_toEndOf            = "parent"
                app:layout_constraintStart_toStartOf        = "parent"
                app:layout_constraintTop_toTopOf            = "parent"
                app:srcCompat                               = "@drawable/loading" />

            <!-- 다음 자판기까지의 거리를 알려주는 레이아웃 -->
            <android.support.constraint.ConstraintLayout
                android:id                                  = "@+id/next_vending_layout"
                android:layout_width                        = "wrap_content"
                android:layout_height                       = "wrap_content"
                android:layout_marginStart                  = "10dp"
                android:layout_marginTop                    = "30dp"
                android:background                          = "#70000000"
                android:visibility                          = "gone"
                app:layout_constraintStart_toEndOf          = "@+id/minimap_layout"
                app:layout_constraintTop_toTopOf            = "parent">

                <!-- 다음 가야할 자판기 까지의 거리 출력 텍스트 뷰 -->
                <TextView
                    android:id                              = "@+id/next_vending"
                    android:layout_width                    = "wrap_content"
                    android:layout_height                   = "wrap_content"
                    android:padding                         = "5dp"
                    android:text                            = "Loading.."
                    android:textColor                       = "#FFFFFF"
                    android:textSize                        = "22dp"
                    app:layout_constraintStart_toStartOf    = "parent"
                    app:layout_constraintTop_toTopOf        = "parent" />


            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <!-- 오른쪽의 정보들을 나타내는 레이아웃 -->
        <android.support.constraint.ConstraintLayout
            android:id                                      = "@+id/info_layout"
            xmlns:android                                   = "http://schemas.android.com/apk/res/android"
            xmlns:app                                       = "http://schemas.android.com/apk/res-auto"
            xmlns:tools                                     = "http://schemas.android.com/tools"
            android:background                              = "#0064C8"
            android:layout_width                            = "200dp"
            android:layout_height                           = "match_parent"
            app:layout_constraintEnd_toEndOf                = "parent"
            app:layout_constraintBottom_toBottomOf          = "parent">

            <!-- 자신의 정보/상태 를 출력해주는 레이아웃 -->
            <LinearLayout
                android:id                                  = "@+id/my_status_layout"
                android:layout_width                        = "match_parent"
                android:layout_height                       = "150dp"
                android:orientation                         = "vertical"
                android:layout_marginTop                    = "25dp"
                app:layout_constraintTop_toTopOf            = "parent"
                app:layout_constraintStart_toStartOf        = "parent">

                <!-- 현재 주소 출력 텍스트 뷰 -->
                <TextView
                    android:id                              = "@+id/now_addr"
                    android:layout_width                    = "wrap_content"
                    android:layout_height                   = "wrap_content"
                    android:layout_marginStart              = "5dp"
                    android:layout_marginEnd                = "5dp"
                    android:letterSpacing                   = "-0.1"
                    android:textSize                        = "13dp"
                    android:text                            = "Loading.."
                    android:textColor                       = "#FFFFFF"
                    android:padding                         = "5dp" />

            <!-- 가로로 2개의 텍스트 뷰를 놓기 위한 레이아웃 -->
            <LinearLayout
                android:layout_width                        = "match_parent"
                android:layout_height                       = "wrap_content"
                android:layout_marginStart                  = "5dp"
                android:layout_marginEnd                    = "5dp"
                android:orientation                         = "horizontal"
                android:weightSum                           = "10">

                <!-- 현재 속도 텍스트 뷰 -->
                <TextView
                    android:id                              = "@+id/now_speed"
                    android:layout_width                    = "wrap_content"
                    android:layout_height                   = "wrap_content"
                    android:textSize                        = "13dp"
                    android:text                            = "Loading.."
                    android:textColor                       = "#FFFFFF"
                    android:padding                         = "5dp"
                    android:layout_weight                   = "5"/>

                <!-- 남은 자판기 텍스트 뷰 -->
                <TextView
                    android:id                              = "@+id/vd_val"
                    android:layout_width                    = "wrap_content"
                    android:layout_height                   = "wrap_content"
                    android:textSize                        = "13dp"
                    android:text                            = "Loading.."
                    android:textColor                       = "#FFFFFF"
                    android:padding                         = "5dp"
                    android:layout_weight                   = "5"/>

            </LinearLayout>

                <!-- 다음 가야할 자판기 이름 -->
                <TextView
                    android:id                              = "@+id/next_vd_name"
                    android:layout_width                    = "wrap_content"
                    android:layout_height                   = "wrap_content"
                    android:layout_marginStart              = "5dp"
                    android:layout_marginEnd                = "5dp"
                    android:letterSpacing                   = "-0.1"
                    android:textSize                        = "13dp"
                    android:text                            = "@string/select_next_vd"
                    android:textColor                       = "#FFFFFF"
                    android:padding                         = "5dp"/>

            </LinearLayout>


            <!-- 특정 자판기의 재품들의 정보를 출력해주는 레이아웃 -->
            <android.support.constraint.ConstraintLayout
                android:id                                  = "@+id/sc_layout"
                android:layout_width                        = "match_parent"
                android:layout_height                       = "190dp"
                android:visibility                          = "gone"
                app:layout_constraintTop_toBottomOf         = "@+id/my_status_layout"
                app:layout_constraintStart_toStartOf        = "parent">

                <!-- 작업지시서 출력 텍스트 뷰 -->
                <TextView
                    android:id                              = "@+id/next_vd_order"
                    android:layout_width                    = "190dp"
                    android:layout_height                   = "wrap_content"
                    android:text                            = "@string/no_order_sheet"
                    android:gravity                         = "center"
                    android:background                      = "@drawable/next_order_sheet_textview"
                    android:textColor                       = "#0064c8"
                    android:padding                         = "5dp"
                    android:letterSpacing                   = "-0.1"
                    app:layout_constraintStart_toStartOf    = "parent"
                    app:layout_constraintEnd_toEndOf        = "parent"
                    app:layout_constraintTop_toTopOf        = "parent"/>


                <!-- 제품들의 리스트들을 출력해주는 리스트 뷰 -->
                <ListView
                    android:id                              = "@+id/sc_lv"
                    android:layout_width                    = "match_parent"
                    android:layout_height                   = "110dp"
                    android:padding                         = "3dp"
                    android:divider                         = "@null"
                    app:layout_constraintStart_toStartOf    = "parent"
                    app:layout_constraintTop_toBottomOf     = "@+id/next_vd_order"
                    app:layout_constraintBottom_toTopOf     = "@+id/ok_button"
                    />

                <!-- 새로고침 버튼 -->
                <ImageButton
                    android:id                              = "@+id/ok_button"
                    android:layout_width                    = "80dp"
                    android:layout_height                   = "30dp"
                    android:scaleType                       = "centerCrop"
                    app:srcCompat                           = "@drawable/refresh"
                    android:background                      = "@android:color/transparent"
                    android:visibility                      = "gone"
                    android:layout_marginBottom             = "10dp"
                    app:layout_constraintStart_toStartOf    = "parent"
                    app:layout_constraintEnd_toStartOf      = "@id/close_button"
                    app:layout_constraintBottom_toBottomOf  = "parent"
                    />

                <!-- 보충완료 버튼 -->
                <ImageButton
                    android:id                              = "@+id/close_button"
                    android:layout_width                    = "80dp"
                    android:layout_height                   = "30dp"
                    android:scaleType                       = "centerCrop"
                    app:srcCompat                           = "@drawable/complete_jp"
                    android:background                      = "@android:color/transparent"
                    android:visibility                      = "gone"
                    android:layout_marginBottom             = "10dp"
                    app:layout_constraintStart_toEndOf      = "@+id/ok_button"
                    app:layout_constraintEnd_toEndOf        =" parent"
                    app:layout_constraintBottom_toBottomOf  = "parent"
                    />

            </android.support.constraint.ConstraintLayout>

            <!-- 열기 버튼 -->
            <ImageButton
                android:id                                  = "@+id/open_button"
                android:layout_width                        = "50dp"
                android:layout_height                       = "50dp"
                android:text                                = "@string/open"
                android:layout_margin                       = "5dp"
                android:src                                 = "@drawable/plus"
                android:scaleType                           = "centerInside"
                android:background                          = "@drawable/image_button_click"
                android:visibility                          = "gone"
                app:layout_constraintEnd_toEndOf            = "parent"
                app:layout_constraintBottom_toBottomOf      = "parent"
                />

            <!-- 로딩시 나오는 이미지 뷰 -->
            <ImageView
                android:id                                  = "@+id/loading_iv"
                android:layout_width                        = "150dp"
                android:layout_height                       = "150dp"
                android:visibility                          = "gone"
                app:layout_constraintBottom_toBottomOf      = "parent"
                app:layout_constraintEnd_toEndOf            = "parent"
                app:layout_constraintStart_toStartOf        = "parent"
                app:layout_constraintTop_toTopOf            = "parent"
                app:srcCompat                               = "@drawable/loading" />

        </android.support.constraint.ConstraintLayout>

        <!-- 오른쪽 정보창을 켜고 닫기 위한 이미지 버튼 -->
        <ImageButton
            android:id                                      = "@+id/info_swap_button"
            android:layout_width                            = "30dp"
            android:layout_height                           = "30dp"
            app:srcCompat                                   = "@drawable/close"
            android:scaleType                               = "fitXY"
            android:background                              = "@android:color/transparent"
            android:layout_marginTop                        = "40dp"
            android:layout_marginEnd                        = "15dp"
            app:layout_constraintTop_toTopOf                = "parent"
            app:layout_constraintEnd_toStartOf              = "@id/info_layout"/>

    </android.support.constraint.ConstraintLayout>

    <!-- 왼쪽->오른쪽 드래그시 나오는 View -->
    <!-- drawer_header.xml 폼으로 커스터마이징-->
    <android.support.design.widget.NavigationView
        android:id                                          = "@+id/navigation_view"
        android:layout_width                                = "wrap_content"
        android:layout_height                               = "match_parent"
        android:layout_gravity                              = "start"
        app:headerLayout                                    = "@layout/drawer_header"
        app:menu                                            = "@menu/drawer" />
</android.support.v4.widget.DrawerLayout>
